--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <input id="email" type="email" name="email" placeholder="Email  Address" required>
                         <div class="toggle">
                             <img src="img/icon-error.svg" alt="" class='error-icon'>
-                            <a href=""><img src="img/icon-arrow.svg" alt="" class="arrow"></a>
+                            <img src="img/icon-arrow.svg" alt="" class="arrow">
                         </div>
                         <p class="error"></p>
                     </form>
